# mcp-server

./: .gitignore  .pre-commit-config.yaml  CLIENT_INTERFACE_README.md  README.md  __init__.py  client_interface.py  mcp_client.py  mcpuser.py  pyproject.toml  pytest.ini  requirements.txt  server.py  test_mcp_client.py
.github/workflows/: check-requirements.yml  test.yml
handlers/: README_codingmcp.md  __init__.py  autodeploy_handler.py  basic_handlers.py  code_analysis_handler.py  codingmcp_handler.py  command_handler.py  github_handler.py  ui_generator_handler.py
mcp-server/: .gitignore  README.md  __init__.py  server.py
mcp-server/handlers/: __init__.py  autodeploy_handler.py  basic_handlers.py  code_analysis_handler.py  command_handler.py  github_handler.py  ui_generator_handler.py
mcp-server/utils/: __init__.py
templates/: index.html
tests/: .gitignore  __init__.py  conftest.py  test_autodeploy_handler.py  test_basic_handlers.py  test_code_analysis_handler.py  test_codingmcp_handler.py  test_command_handler.py  test_github_handler.py  test_ui_generator_handler.py
utils/: __init__.py  tool_base.py
